--- a/Canvas/css/style.css
+++ b/Canvas/css/style.css
@@ -6,8 +6,17 @@
 	-moz-box-sizing: border-box;
 }
 
+@font-face {
+	font-family: "Share Tech Mono";
+	src: url(../fonts/ShareTechMono-Regular.ttf);
+}
+
 body {
-	background: #4587B9FF;
+	background: url(../img/bg_space.jpg) no-repeat center top / cover;
+	background-attachment: fixed;
+	color: white;
+	font-family: "Share Tech Mono";
+	overflow:  hidden;
 }
 
 canvas {
@@ -34,16 +43,537 @@ canvas {
 }
 
 #screen {
-	
+	width: 100vw;
+	height: 100vh;
+}
+
+#alien__img {
+	position: absolute;
+	left: 5%;
+	bottom: 0;
+	transform: translate(-5%, 0);
+}
+
+#description {
+	position: absolute;
+	left: 50%;
+	top: 30%;
+	transform: translate(-50%, -30%);
+	list-style-type: none;
+	text-align: center;
+	width: 100%;
+	font-size: 18px;
+}
+
+#header {
+	position: absolute;
+	left: 50%;
+	top: 10%;
+	transform: translate(-50%, -10%);
+	text-shadow: #4587B9FF 1px 1px 0, #4587B9FF 2px 2px 0, 
+                 #4587B9FF 3px 3px 0, #4587B9FF 4px 4px 0, 
+                 #4587B9FF 5px 5px 0;
+}
+
+#bg_second {
+	width: 1000px;
+	height: 650px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+
+	border: 5px solid white;
+	background: #4587B9FF;
 }
 
 #main__screen {
-	text-indent: 30px;
-	border: 10px ridge #ff4f00;
-	/*padding: 10px 20px 10px 20px;*/
-	margin: 20px auto;
 	width: 700px;
 	height: 500px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
 
+	border: 5px solid white;
 	background: #F60;
+}
+
+a {
+  text-decoration: none;
+  color: #EB1;
+  font-family: "Share Tech Mono";
+}
+
+.glitch-btn {
+  display: inline-block;
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  color: white;
+}
+
+.glitch-btn .mask {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  display: none;
+}
+
+.glitch-btn .mask span {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 100%;
+  top: -100%;
+}
+
+.glitch-btn:hover {
+  color: white;
+}
+
+.glitch-btn:hover:before {
+  background: #4587B9FF;
+  transform: translateX(120%) scaleX(3) scaleY(0.8);
+}
+
+.glitch-btn:before {
+  content: "";
+  position: absolute;
+  left: -15%;
+  top: -50%;
+  background: #4587B9FF;
+  width: 40%;
+  height: 200%;
+  padding: 0px;
+  z-index: -1;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.glitch-btn:after {
+  content: "";
+  position: absolute;
+  left: -5%;
+  top: 105%;
+  background: white;
+  width: 112%;
+  height: 10%;
+  padding: 0px;
+  z-index: -1;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.glitch-btn:hover:after {
+  background: white;
+  transform: translateX(-55%) translateY(-600%) rotate(90deg) scaleX(0.3);
+}
+
+.glitch-btn .mask1 {
+  height: 20%;
+  top: 19%;
+}
+
+.glitch-btn .mask2 {
+  height: 30%;
+  top: 35%;
+}
+
+.glitch-btn .mask3 {
+  height: 57%;
+  top: 63%;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.glitch-btn:hover .mask1 {
+  animation: glitchin1 0.2s 0.3s both;
+}
+
+.glitch-btn:hover .mask2 {
+  animation: glitchin2 0.2s 0.2s both;
+}
+
+.glitch-btn:hover .mask3 {
+  animation: glitchin1 0.2s 0.2s both;
+}
+
+.glitch-btn:hover .hidden {
+  animation: fade-in 0.1s 0.2s forwards;
+}
+
+.glitch-btn:hover .text {
+  animation: fade-in 0.1s 0.2s forwards;
+}
+
+.glitch-btn:hover .mask {
+  display: block;
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes glitchin1 {
+  100% {
+    opacity: 0;
+    transform: translate(0px, 0px);
+  }
+  95% {
+    opacity: 1;
+    -webkit-transform: translate(0.5px, 0.05px);
+    transform: translate(0.5px, 0.05px);
+  }
+  90% {
+    -webkit-transform: translate(0.6px, -0.3px);
+    transform: translate(0.6px, -0.3px);
+  }
+  85% {
+    -webkit-transform: translate(1.2px, 0px);
+    transform: translate(1.2px, 0px);
+  }
+  80% {
+    -webkit-transform: translate(1.2px, 0.2px);
+    transform: translate(1.2px, 0.2px);
+  }
+  75% {
+    -webkit-transform: translate(0.5px, 1px);
+    transform: translate(0.5px, 1px);
+  }
+  70% {
+    -webkit-transform: translate(0.3px, 1.2px);
+    transform: translate(0.3px, 1.2px);
+  }
+  65% {
+    -webkit-transform: translate(-2.1px, 0.7px);
+    transform: translate(-2.1px, 0.7px);
+  }
+  60% {
+    -webkit-transform: translate(3.6px, 0.4px);
+    transform: translate(3.6px, 0.4px);
+  }
+  55% {
+    -webkit-transform: translate(0.45px, 1.8px);
+    transform: translate(0.45px, 1.8px);
+  }
+  50% {
+    -webkit-transform: translate(-3px, -1px);
+    transform: translate(-3px, -1px);
+  }
+  45% {
+    -webkit-transform: translate(-4.4px, 1.1px);
+    transform: translate(-4.4px, 1.1px);
+  }
+  40% {
+    -webkit-transform: translate(-4.2px, 2.4px);
+    transform: translate(-4.2px, 2.4px);
+  }
+  35% {
+    -webkit-transform: translate(2.6px, 1.3px);
+    transform: translate(2.6px, 1.3px);
+  }
+  30% {
+    -webkit-transform: translate(-1.4px, 2.8px);
+    transform: translate(-1.4px, 2.8px);
+  }
+  25% {
+    -webkit-transform: translate(6px, 0.75px);
+    transform: translate(6px, 0.75px);
+  }
+  20% {
+    -webkit-transform: translate(0px, -1.6px);
+    transform: translate(0px, -1.6px);
+  }
+  15% {
+    -webkit-transform: translate(-5.95px, -0.85px);
+    transform: translate(-5.95px, -0.85px);
+  }
+  10% {
+    -webkit-transform: translate(3.6px, 3.6px);
+    transform: translate(3.6px, 3.6px);
+  }
+  5% {
+    -webkit-transform: translate(-0.95px, -0.95px);
+    transform: translate(-0.95px, -0.95px);
+  }
+  1% {
+    opacity: 1;
+  }
+}
+@keyframes glitchin1 {
+  100% {
+    opacity: 0;
+    transform: translate(0px, 0px);
+  }
+  95% {
+    opacity: 1;
+    -webkit-transform: translate(0.5px, 0.05px);
+    transform: translate(0.5px, 0.05px);
+  }
+  90% {
+    -webkit-transform: translate(0.6px, -0.3px);
+    transform: translate(0.6px, -0.3px);
+  }
+  85% {
+    -webkit-transform: translate(1.2px, 0px);
+    transform: translate(1.2px, 0px);
+  }
+  80% {
+    -webkit-transform: translate(1.2px, 0.2px);
+    transform: translate(1.2px, 0.2px);
+  }
+  75% {
+    -webkit-transform: translate(0.5px, 1px);
+    transform: translate(0.5px, 1px);
+  }
+  70% {
+    -webkit-transform: translate(0.3px, 1.2px);
+    transform: translate(0.3px, 1.2px);
+  }
+  65% {
+    -webkit-transform: translate(-2.1px, 0.7px);
+    transform: translate(-2.1px, 0.7px);
+  }
+  60% {
+    -webkit-transform: translate(3.6px, 0.4px);
+    transform: translate(3.6px, 0.4px);
+  }
+  55% {
+    -webkit-transform: translate(0.45px, 1.8px);
+    transform: translate(0.45px, 1.8px);
+  }
+  50% {
+    -webkit-transform: translate(-3px, -1px);
+    transform: translate(-3px, -1px);
+  }
+  45% {
+    -webkit-transform: translate(-4.4px, 1.1px);
+    transform: translate(-4.4px, 1.1px);
+  }
+  40% {
+    -webkit-transform: translate(-4.2px, 2.4px);
+    transform: translate(-4.2px, 2.4px);
+  }
+  35% {
+    -webkit-transform: translate(2.6px, 1.3px);
+    transform: translate(2.6px, 1.3px);
+  }
+  30% {
+    -webkit-transform: translate(-1.4px, 2.8px);
+    transform: translate(-1.4px, 2.8px);
+  }
+  25% {
+    -webkit-transform: translate(6px, 0.75px);
+    transform: translate(6px, 0.75px);
+  }
+  20% {
+    -webkit-transform: translate(0px, -1.6px);
+    transform: translate(0px, -1.6px);
+  }
+  15% {
+    -webkit-transform: translate(-5.95px, -0.85px);
+    transform: translate(-5.95px, -0.85px);
+  }
+  10% {
+    -webkit-transform: translate(3.6px, 3.6px);
+    transform: translate(3.6px, 3.6px);
+  }
+  5% {
+    -webkit-transform: translate(-0.95px, -0.95px);
+    transform: translate(-0.95px, -0.95px);
+  }
+  1% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes glitchin2 {
+  100% {
+    opacity: 0;
+    transform: translate(0px, 0px);
+  }
+  95% {
+    opacity: 1;
+    -webkit-transform: translate(-0.5px, -0.05px);
+    transform: translate(-0.5px, -0.05px);
+  }
+  90% {
+    -webkit-transform: translate(-0.6px, 0.3px);
+    transform: translate(-0.6px, 0.3px);
+  }
+  85% {
+    -webkit-transform: translate(-1.2px, 0px);
+    transform: translate(-1.2px, 0px);
+  }
+  80% {
+    -webkit-transform: translate(-1.2px, -0.2px);
+    transform: translate(-1.2px, -0.2px);
+  }
+  75% {
+    -webkit-transform: translate(-0.5px, -1px);
+    transform: translate(-0.5px, -1px);
+  }
+  70% {
+    -webkit-transform: translate(-0.3px, -1.2px);
+    transform: translate(-0.3px, -1.2px);
+  }
+  65% {
+    -webkit-transform: translate(2.1px, -0.7px);
+    transform: translate(2.1px, -0.7px);
+  }
+  60% {
+    -webkit-transform: translate(-3.6px, -0.4px);
+    transform: translate(-3.6px, -0.4px);
+  }
+  55% {
+    -webkit-transform: translate(-0.45px, -1.8px);
+    transform: translate(-0.45px, -1.8px);
+  }
+  50% {
+    -webkit-transform: translate(3px, 1px);
+    transform: translate(3px, 1px);
+  }
+  45% {
+    -webkit-transform: translate(4.4px, -1.1px);
+    transform: translate(4.4px, -1.1px);
+  }
+  40% {
+    -webkit-transform: translate(4.2px, -2.4px);
+    transform: translate(4.2px, -2.4px);
+  }
+  35% {
+    -webkit-transform: translate(-2.6px, -1.3px);
+    transform: translate(-2.6px, -1.3px);
+  }
+  30% {
+    -webkit-transform: translate(1.4px, -2.8px);
+    transform: translate(1.4px, -2.8px);
+  }
+  25% {
+    -webkit-transform: translate(-6px, -0.75px);
+    transform: translate(-6px, -0.75px);
+  }
+  20% {
+    -webkit-transform: translate(0px, 1.6px);
+    transform: translate(0px, 1.6px);
+  }
+  15% {
+    -webkit-transform: translate(5.95px, 0.85px);
+    transform: translate(5.95px, 0.85px);
+  }
+  10% {
+    -webkit-transform: translate(-3.6px, -3.6px);
+    transform: translate(-3.6px, -3.6px);
+  }
+  5% {
+    -webkit-transform: translate(0.95px, 0.95px);
+    transform: translate(0.95px, 0.95px);
+  }
+  1% {
+    opacity: 1;
+  }
+}
+@keyframes glitchin2 {
+  100% {
+    opacity: 0;
+    transform: translate(0px, 0px);
+  }
+  95% {
+    opacity: 1;
+    -webkit-transform: translate(-0.5px, -0.05px);
+    transform: translate(-0.5px, -0.05px);
+  }
+  90% {
+    -webkit-transform: translate(-0.6px, 0.3px);
+    transform: translate(-0.6px, 0.3px);
+  }
+  85% {
+    -webkit-transform: translate(-1.2px, 0px);
+    transform: translate(-1.2px, 0px);
+  }
+  80% {
+    -webkit-transform: translate(-1.2px, -0.2px);
+    transform: translate(-1.2px, -0.2px);
+  }
+  75% {
+    -webkit-transform: translate(-0.5px, -1px);
+    transform: translate(-0.5px, -1px);
+  }
+  70% {
+    -webkit-transform: translate(-0.3px, -1.2px);
+    transform: translate(-0.3px, -1.2px);
+  }
+  65% {
+    -webkit-transform: translate(2.1px, -0.7px);
+    transform: translate(2.1px, -0.7px);
+  }
+  60% {
+    -webkit-transform: translate(-3.6px, -0.4px);
+    transform: translate(-3.6px, -0.4px);
+  }
+  55% {
+    -webkit-transform: translate(-0.45px, -1.8px);
+    transform: translate(-0.45px, -1.8px);
+  }
+  50% {
+    -webkit-transform: translate(3px, 1px);
+    transform: translate(3px, 1px);
+  }
+  45% {
+    -webkit-transform: translate(4.4px, -1.1px);
+    transform: translate(4.4px, -1.1px);
+  }
+  40% {
+    -webkit-transform: translate(4.2px, -2.4px);
+    transform: translate(4.2px, -2.4px);
+  }
+  35% {
+    -webkit-transform: translate(-2.6px, -1.3px);
+    transform: translate(-2.6px, -1.3px);
+  }
+  30% {
+    -webkit-transform: translate(1.4px, -2.8px);
+    transform: translate(1.4px, -2.8px);
+  }
+  25% {
+    -webkit-transform: translate(-6px, -0.75px);
+    transform: translate(-6px, -0.75px);
+  }
+  20% {
+    -webkit-transform: translate(0px, 1.6px);
+    transform: translate(0px, 1.6px);
+  }
+  15% {
+    -webkit-transform: translate(5.95px, 0.85px);
+    transform: translate(5.95px, 0.85px);
+  }
+  10% {
+    -webkit-transform: translate(-3.6px, -3.6px);
+    transform: translate(-3.6px, -3.6px);
+  }
+  5% {
+    -webkit-transform: translate(0.95px, 0.95px);
+    transform: translate(0.95px, 0.95px);
+  }
+  1% {
+    opacity: 1;
+  }
 }
