--- a/Canvas/css/style.css
+++ b/Canvas/css/style.css
@@ -36,6 +36,22 @@ img[name="heart"] {
 	display: inherit;
 }
 
+.bl {
+	font-weight: bold;
+}
+
+.timer {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 30px;
+
+	border: 10px ridge #ff4f00;
+	padding: 5px;
+	background: #000;
+}
+
 #heart__pos {
 	position: absolute;
 	top: 50%;
@@ -72,7 +88,7 @@ img[name="heart"] {
 	transform: translate(-5%, 0);
 }
 
-#description {
+.description {
 	position: absolute;
 	left: 50%;
 	top: 30%;
@@ -83,7 +99,7 @@ img[name="heart"] {
 	font-size: 18px;
 }
 
-#header {
+.header {
 	position: absolute;
 	left: 50%;
 	top: 10%;
@@ -93,7 +109,7 @@ img[name="heart"] {
                  #4587B9FF 5px 5px 0;
 }
 
-#bg_second {
+.bg_second {
 	width: 1000px;
 	height: 650px;
 	position: absolute;
@@ -106,7 +122,7 @@ img[name="heart"] {
 	background: #4587B9FF;
 }
 
-#main__screen {
+.main__screen {
 	width: 700px;
 	height: 500px;
 	position: absolute;
