--- a/Canvas/style.css
+++ b/Canvas/style.css
@@ -8,14 +8,12 @@
 
 @font-face {
 	font-family: "Share Tech Mono";
-	src: url(../fonts/ShareTechMono-Regular.ttf);
+	src: url(fonts/ShareTechMono-Regular.ttf);
 }
 
 body {
-	background: url(../img/bg_space.jpg) no-repeat center top / cover;
+	background: url(img/bg_space.jpg) no-repeat center top / cover;
 	background-attachment: fixed;
-	-webkit-background-size: 100%;
-	background-size: 100%;
 	color: white;
 	font-family: "Share Tech Mono";
 	overflow:  hidden;
